# opspilot

./: .gitignore  CLAUDE.md  DEPLOY.md  Dockerfile  LICENSE  README.md  pyproject.toml  render.yaml
docs/: PRD.md
examples/: customers.csv  orders.csv
src/opspilot/: __init__.py  app.py  cli.py  db.py  engine.py  ingest.py  nl2sql.py  profile.py  sqlsafe.py
src/opspilot/static/: index.html
tests/: conftest.py  test_api.py  test_engine.py  test_ingest_profile.py  test_sqlsafe.py
